...
        buttonView.titleLabel?.font = UIFont.systemFont(ofSize: 17, weight: .bold)
        buttonView.setTitleColor(#colorLiteral(red: 0.1352768838, green: 0.1420838535, blue: 0.1778985262, alpha: 1), for: .normal)
        buttonView.backgroundColor = #colorLiteral(red: 1, green: 0.9999999404, blue: 1, alpha: 1)
        buttonView.layer.cornerRadius = 16
        buttonView.layer.masksToBounds = true
        buttonView.translatesAutoresizingMaskIntoConstraints = false
        buttonView.accessibilityIdentifier = "Authenticate"
        view.addSubview(buttonView)
        
        NSLayoutConstraint.activate([
            buttonView.heightAnchor.constraint(equalToConstant: 48),
            buttonView.centerXAnchor.constraint(equalTo: view.centerXAnchor),
            buttonView.bottomAnchor.constraint(equalTo: view.safeAreaLayoutGuide.bottomAnchor, constant: -90),
...
