...
                                <rect key="frame" x="9" y="46" width="46" height="46"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="46" id="4qe-p4-Muv"/>
                                    <constraint firstAttribute="width" constant="46" id="Rhe-AP-UI0"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
                                <connections>
                                    <action selector="didTapBackButton" destination="MNv-07-Hxe" eventType="touchUpInside" id="997-0D-XBO"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ztw-Rj-3HT">
                                <rect key="frame" x="181.5" y="809" width="51" height="51"/>
...
